# idr

./: pyproject.toml  setup.py
.github/workflows/: wheels.yml
idr/: inv_cdf.pyx
