[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel", "Cython", "numpy"]

[project]
name = "idr"
version = "2.0.5"
requires-python = ">=3.7"
dynamic = ["description", 
            "readme", 
            "license", 
            "authors", 
            "keywords", 
            "classifiers", 
            "dependencies", 
            "optional-dependencies"]

